--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>P3 Pizza Builder</title>
 	
 	<link rel="stylesheet" href="css/style.css" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin' rel='stylesheet' type='text/css'>
