--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>P3 Pizza Builder</title>
 	
 	<link rel="stylesheet" href="css/style.css" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Life+Savers:400,700&subset=latin' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Life+Savers:400,700' rel='stylesheet' type='text/css'>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
@@ -27,15 +27,15 @@
 		<div id="base">
 			<div class="pad" id="small">Small</div>
 			<input type="radio" name="pad" id="s" value="10">
-			<label for="small">$ 10</label><br /><br />
+			<label for="s">$ 10</label><br /><br />
 			
 			<div class="pad" id="medium">Medium</div>
 			<input type="radio" name="pad" id="m" value="12">
-			<label for="medium">$ 12</label><br /><br />
+			<label for="m"> $ 12</label><br /><br />
 			
 			<div class="pad" id="large">Large</div>
 			<input type="radio" name="pad" id="l" value="15">
-			<label for="large">$ 15</label><br /><br />
+			<label for="l"> $ 15</label><br /><br />
 		</div>
 		
 		<!--Toppings-->
